Installer Semi-Final Commit. AFAICT it is now working 100%. More testing needs to be done however, preferably when I've not come off a 13 hour coding session.

--- a/installer/license.html
+++ b/installer/license.html
@@ -5,6 +5,7 @@
 <body>
 <p>Dancing Mad is Copyright (c) 2015 Dylan J. Morrison &lt;insidious@gmail.com&gt;</p>
 <p>Final copies will use the ISC license.</p>
+<p>Includes or links to/depends on code licensed under the MIT license (Python-IPS), the GPLv3 license (PyQt5, Qt5), and the Python license (pretty much everything else...)
 <p>This Pre-Alpha copy is distributed to a select number of individuals under the below NDA:</p>
 <br />
 <p>This is an agreement, effective upon install, between Dylan J. Morrison ("Developer") and you ("Tester"), in which Tester agrees to test a software program known as Dancing Mad (the "Software") and keep Developer aware of the test results. </p>
