Changed readme.html's Credits section to properly credit GitHub user edale2 for his contributions to our songset. See Issues #14, #13, #15, and #10.

--- a/installer/readme.html
+++ b/installer/readme.html
@@ -76,7 +76,8 @@ p, li { white-space: pre-wrap; }
 	<ul><li>Dylan J. Morrison (Insidious)</li></ul></li></ul>
 <ul><li>Music Editing
 	<ul><li>Covarr</li>
-	<li>Insidious</li></ul></li></ul>
+	<li>Insidious</li>
+	<li>edale2</li></ul></li></ul>
 <ul><li>Testing & Debugging
 	<ul><li>Covarr</li>
 	<li>Retro Dan</li>
