--- a/installer/license.html
+++ b/installer/license.html
@@ -3,7 +3,7 @@
 <title>License File</title>
 </head>
 <body>
-<p>Dancing Mad is Copyright (c) 2015 Dylan J. Morrison &lt;insidious@gmail.com&gt;</p>
+<p>Dancing Mad is Copyright (c) 2015-2017 Dylan J. Morrison &lt;dylanjmorrison611@gmail.com&gt;</p>
 <p>Includes or links to/depends on code licensed under the MIT license (Python-IPS), the GPLv3 license (PyQt5, Qt5), and the Python license (pretty much everything else...)</p>
 <p>Permission to use, copy, modify, and/or distribute this software for any purpose without fee is hereby granted, provided that the above copyright notice and this permission notice appear in all copies.
 <br />
