--- a/installer/readme.html
+++ b/installer/readme.html
@@ -86,7 +86,9 @@ p, li { white-space: pre-wrap; }
 	<ul><li>FinalFanTim</li>
 	<li>Sean Schafianski</li>
 	<li>Nobuo Uematsu</li>
-	<li>OCRemix Arrangers (various, see Balance & Ruin album on OCRemix website)</li></ul></li></ul>
+	<li>OCRemix Arrangers (various, see Balance & Ruin album on OCRemix website)</li>
+	<li>Tokyo Symphony Orchestra (GAME MUSIC CONCERT 4)</li>
+	<li>edale2 (editing/adding ambient sound)</li></ul></li></ul>
 <ul><li>Special Thanks
 	<ul><li>ikari</li>
 	<li>byuu</li>
