Fixed minor formatting error.

--- a/installer/readme.html
+++ b/installer/readme.html
@@ -154,7 +154,7 @@ bsnes-plus, snes9x-msu, and latest SD2SNES firmwares, due to updates to the MSU-
 	<ul><li>Covarr</li>
 	<li>Insidious</li>
 	<li>edale2</li>
-    <li>qwertymodo</li></ul></li></ul
+    <li>qwertymodo</li></ul></li></ul>
 <ul><li>Testing & Debugging
 	<ul><li>Covarr</li>
 	<li>Retro Dan</li>
