--- a/installer/readme.html
+++ b/installer/readme.html
@@ -12,7 +12,14 @@ p, li { white-space: pre-wrap; }
 .superscriptfont { font-family:'Sans Serif'; font-size:9pt; vertical-align:super; }
 </style></head><body style=" font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;">
 <p class="mainp"><span class="mainfont">Welcome to Dancing Mad, the music replacement mod for FFVI. <br /><br />Readme for Beta 20171008<br /></span><span class="boldfont"><br /></span><span class="bigfont">Contents</span></p>
-<p class="mainp"><span class="boldfont">1</span><span class="mainfont">. Requirements<br /></span><span class="boldfont">2</span><span class="mainfont">. Music<br /></span><span class="boldfont">3</span><span class="mainfont">. Installation<br /></span><span class="boldfont">4</span><span class="mainfont">. Custom Track Selection<br /></span><span class="boldfont">5</span><span class="mainfont">. Higan Post-Installation<br /></span><span class="boldfont">6</span><span class="mainfont">. Running the Game<br /></span><span class="boldfont">7</span><span class="mainfont">. Known Bugs<br /></span><span class="boldfont">8</span><span class="mainfont">. Tester Information</span><br /><span class="boldfont">9</span><span class="mainfont">. Credits & Special Thanks</span></p>
+<p class="mainp"><span class="boldfont">1</span><span class="mainfont">. Requirements<br /></span>
+<span class="boldfont">2</span><span class="mainfont">. Music<br /></span>
+<span class="boldfont">3</span><span class="mainfont">. Installation<br /></span>
+<span class="boldfont">4</span><span class="mainfont">. Custom Track Selection<br /></span>
+<span class="boldfont">5</span><span class="mainfont">. Higan Post-Installation<br /></span>
+<span class="boldfont">6</span><span class="mainfont">. Running the Game<br /></span>
+<span class="boldfont">7</span><span class="mainfont">. Known Bugs<br /></span>
+<span class="boldfont">8</span><span class="mainfont">. Credits & Special Thanks</span></p>
 <p class="emptyp"><br /></p>
 <p class="mainp"><span class="bigfont">1. Requirements</span></p>
 <p class="mainp"><span class="mainfont">Here's what you'll need to complete installation:</span></p>
