Don't dummy out Opera tracks anymore. Add Black Mages credit.

--- a/installer/readme.html
+++ b/installer/readme.html
@@ -173,6 +173,7 @@ bsnes-plus, snes9x-msu, and latest SD2SNES firmwares, due to updates to the MSU-
 	<li>Nobuo Uematsu</li>
 	<li>OCRemix Arrangers (various, see Balance & Ruin album on OCRemix website)</li>
 	<li>Tokyo Symphony Orchestra (GAME MUSIC CONCERT 4)</li>
+    <li>The Black Mages</li>
 	<li>edale2 (editing/adding ambient sound)</li></ul></li></ul>
 <ul><li>Special Thanks
 	<ul><li>ikari</li>
