Added "do not download" support.

--- a/installer/readme.html
+++ b/installer/readme.html
@@ -103,7 +103,8 @@ BSNES v075 and earlier is no longer officially supported at all nor recommended.
 <p class="mainp"><span class="mainfont">You've decided to pick and choose which tracks you'd like to hear! Good on you! On this page, you'll be presented with a table and a series of radio buttons. <br />
 <br />
 On the top, the headers of each column show the track source you're selecting from, with OST being the official remastered OST, FFT being FinalFanTim's FF6 Remaster, SSC being Sean Schafianski's Final Fantasy VI Remastered 
-Soundtrack: Disc One, OCR being the OCRemix Balance and Ruin album, and OTH being various alternate sources</span><span class="superscriptfont">*</span><span class="mainfont">.</span></p>
+Soundtrack: Disc One, OCR being the OCRemix Balance and Ruin album, OCR2 being alternate loops of that album by qwertymodo, and OTH being various alternate sources. The "SPC" column essentially serves as a "Do not download",
+it will leave this track undownloaded causing it to be played via the SPC. This can also be used if you want to reinstall without redownloading unchanged tracks.</span><span class="superscriptfont">*</span><span class="mainfont">.</span></p>
 <p class="mainp"><span class="mainfont">Along the side, the headers of each row show you the track (by the name on the Japanese Soundtrack) you're selecting a source for. The opera tracks (2-07 through 2-09), being a combined 
 suite, can only be selected as a group. </span></p>
 <p class="mainp"><span class="mainfont">Select a source to your liking for each track. You'll only be allowed to select one source for each row, and if the source in question does not exist for that track, 
