Fix up TWUE version numbers, typos, random other miscellany.

--- a/installer/readme.html
+++ b/installer/readme.html
@@ -55,8 +55,8 @@ p, li { white-space: pre-wrap; }
 <span class="mainfont"> on its RomHacking.net page, Ted Woolsey Uncensored Edition is an alternate translation that seeks to clean up the script while keeping the original feel of Ted Woolsey's translation. 
 It also contains many bug fixes and other improvements to the game. This is included primarily by request! Many players were using this patch alongside Dancing Mad and were worried about compatiblity. 
 Extensive testing has proven compatibility to not be an issue, and now the installer has an option to automatically patch the game with it, patching it in the correct order relative to Dancing Mad and the other optional patches.
-<br /><br /></span><span class="boldfont">Madsiur's Music Player Patch, Dancing Mad Edition:<br /><br /></span><span class="mainfont">Provides a music player/&quot;sound test&quot; in the main menu, allowing you to test
-and listen to the various songs. Provided in two versions, one supports the Cut Song Restoration mod detailed below, the other does not. The installer will automatically select and apply the appropriate patch.<br /><br /></span>
+<br /><br /></span><span class="boldfont">Madsiur's Music Player Patch, 
+Dancing Mad Edition:<br /><br /></span><span class="mainfont">Provides a music player/&quot;sound test&quot; in the main menu, allowing you to test and listen to the various songs. Provided in two versions, one supports the Cut Song Restoration mod detailed below, the other does not. The installer will automatically select and apply the appropriate patch.<br /><br /></span>
 <span class="boldfont">edale2's Cut Songs Restoration Mod</span><span class="mainfont">:<br /><br /></span><span class="mainfont">This option applies the optional Cut Songs Restoration mod, which seamlessly reintroduces 4 
 songs that were cut from FFVI in development and later released in the FFVI Special Tracks Album, without removing any of the existing tracks. These tracks are used instead of the original tracks in certain towns and other
 areas. Mod created by edale2, with help from Insidious611 (Dancing Mad's primary author) and mziab.</span></p>
