--- a/installer/readme.html
+++ b/installer/readme.html
@@ -12,7 +12,7 @@ p, li { white-space: pre-wrap; }
 .superscriptfont { font-family:'Sans Serif'; font-size:9pt; vertical-align:super; }
 </style></head><body style=" font-family:'Sans Serif'; font-size:8.25pt; font-weight:400; font-style:normal;">
 <p class="mainp"><span class="mainfont">Welcome to Dancing Mad, the music replacement mod for FFVI. <br /><br />Readme for Beta 20180902<br /></span><span class="boldfont"><br /></span><span class="bigfont">Contents</span></p>
-<p class="mainp"><span class="boldfont">1</span><span class="mainfont">. Requirements<br /></span><span class="boldfont">2</span><span class="mainfont">. Music<br /></span><span class="boldfont">2b. </span><span class="mainfont">Optional Patches<br /></span><span class="boldfont">3</span><span class="mainfont">. Installation<br /></span><span class="boldfont">4</span><span class="mainfont">. Custom Track Selection<br /></span><span class="boldfont">5</span><span class="mainfont">. Higan Post-Installation<br /></span><span class="boldfont">6</span><span class="mainfont">. Running the Game<br /></span><span class="boldfont">7</span><span class="mainfont">. Known Bugs<br /></span><span class="boldfont">8</span><span class="mainfont">. Credits &amp; Special Thanks</span></p>
+<p class="mainp"><span class="boldfont">1</span><span class="mainfont">. Requirements<br /></span><span class="boldfont">2</span><span class="mainfont">. Music<br /></span><span class="boldfont">2b. </span><span class="mainfont">Optional Patches<br /></span><span class="boldfont">3</span><span class="mainfont">. Installation<br /></span><span class="boldfont">4</span><span class="mainfont">. Custom Track Selection<br /></span><span class="boldfont">5</span><span class="mainfont">. Higan Post-Installation<br /></span><span class="boldfont">6</span><span class="mainfont">. Running the Game<br /></span><span class="boldfont">7</span><span class="mainfont">. Known Bugs and New Features<br /></span><span class="boldfont">8</span><span class="mainfont">. Credits &amp; Special Thanks</span></p>
 <p class="emptyp"><br /></p>
 <p class="mainp"><span class="bigfont">1. Requirements</span></p>
 <p class="mainp"><span class="mainfont">Here's what you'll need to complete installation:</span></p>
@@ -87,6 +87,7 @@ areas. Mod created by edale2, with help from Insidious611 (Dancing Mad's primary
 <p class="mainp"><span class="mainfont">Along the side, the headers of each row show you the track (by the name on the Japanese Soundtrack) you're selecting a source for. The opera tracks (2-07 through 2-09), being a combined suite, can only be selected as a group. </span></p>
 <p class="mainp"><span class="mainfont">Select a source to your liking for each track. You'll only be allowed to select one source for each row, and if the source in question does not exist for that track, there will not be a radio button for it.</span></p>
 <p class="mainp"><span class="mainfont">If you want to load a predefined selection and base your custom selection on this, click one of the radio buttons at the top, and then click &quot;Load&quot;.</span></p>
+<p class="mainp"><span class="mainfont">After you have selected your main tracks, you will be taken to a second page to select which version of the Opera you want. This is necessary because there are many versions of the Opera available, and most are not from the same sources as the rest of the tracks!</span></p>
 <p class="mainp"><span class="mainfont">If this is all too confusing for you to understand right now, remember that this readme is available as &quot;readme.html&quot; in the installer folder. Pull it up while you're at the custom track selection page and refer to it and this will all make a hell of a lot more sense.</span></p>
 <p class="emptyp"><br /></p>
 <p class="emptyp"><br /></p>
@@ -103,13 +104,34 @@ areas. Mod created by edale2, with help from Insidious611 (Dancing Mad's primary
 <p class="mainp"><span class="mainfont">If you're using SD2SNES or Snes9x-msu, copy the ff3.sfc file, ff3.msu file, and the various ff3-##.pcm files to your SD2SNES cart (or Snes9x directory) and load ff3.sfc as normal.</span></p>
 <p class="mainp"><span class="mainfont">You should immediately be able to notice the difference as the opening music plays. Even if you're using just OST tracks the MSU music is louder and clearer. Enjoy!</span></p>
 <p class="emptyp"><br /></p>
-<p class="mainp"><span class="bigfont">7. Known Bugs</span></p>
-<p class="mainp"><span class="mainfont">Testers pay attention! Unless otherwise noted, please do not report these as these are known to be problems.</span></p>
+<p class="mainp"><span class="bigfont">7. Known Bugs, Recently Fixed Bugs, and New Features</span></p>
+<p class="mainp"><span class="mainfont">Known bugs follow! Testers pay attention! Unless otherwise noted, please do not report these as these are known to be problems.</span></p>
 <p class="emptyp"><br /></p>
-<p class="mainp"><span class="mainfont">* Music may not continue after certain events. So far, going to sleep has been the only directly reported instance of this, please report other such events to the </span><a href="http://github.com/Insidious611/DancingMadFF6/issues"><span class="linkfont">GitHub issue tracker</span></a><span class="mainfont">. May be related to issue </span><a href="https://github.com/Insidious611/DancingMadFF6/issues/4"><span class="linkfont">#4</span></a><span class="mainfont">.</span></p>
-<p class="mainp"><span class="mainfont">* On non-plus versions of BSNES and older SD2SNES firmware, area music will restart after battles. Please see the </span><a href="http://forums.qhimm.com/index.php?topic=16077.0"><span class="linkfont">thread</span></a><span class="mainfont"> on qhimm.com for discussion of this issue. Area music *will* resume on Higan v096 and later, bsnes-plus, snes9x-msu, and latest SD2SNES firmwares, due to updates to the MSU-1 code. I will not workaround nor fix resume support on earlier versions of Higan or BSNES. </span></p>
-<p class="mainp"><span class="mainfont">* Opera tracks do not work correctly and have been stubbed out.  The opera is a complex part of the game, musically, and will require its own special handling in the ASM.</span></p>
+<p class="mainp"><span class="mainfont">* On older versions of BSNES and older SD2SNES firmware, area music will restart after battles. Please see the </span><a href="http://forums.qhimm.com/index.php?topic=16077.0"><span class="linkfont">thread</span></a><span class="mainfont"> on qhimm.com for discussion of this issue. Area music *will* resume on Higan v096 and later, bsnes-plus, snes9x-msu, and latest SD2SNES firmwares, due to updates to the MSU-1 code. I will not workaround nor fix resume support on earlier versions of Higan or BSNES. </span></p>
 <p class="mainp"><span class="mainfont">* Tracks do not smoothly fade. Implementing this requires precise NMI timing and is a continuing project. Contributions welcome.</span></p>
+<p class="mainp"><span class="mainfont">* Installer may look strange on High DPI systems (4K displays, 1080p laptops with small screens). It should at the very least be usable now, but for best effect please use the compatibility settings in Windows to set the DancingMadInstaller.exe to System instead of Application scaling.</span></p>
+<p class="mainp"><span class="mainfont">* Music may revert to SPC after certain scenes. Known scenes mostly involve the Coin Song and the Figaro theme.</span></p>
+<p class="emptyp"><br /></p>
+<p class="mainp"><span class="mainfont">Recently fixed bugs follow! For more details, as well as previously fixed bugs, check the 'closed' section of the GitHub issues page.</span></p>
+<p class="emptyp"><br /></p>
+<p class="mainp"><span class="mainfont">* A workaround for the issue where the wrong song plays during some of Shadow's cutscenes was implemented. The wrong song may still play for a split second.</span></p>
+<p class="mainp"><span class="mainfont">* Installer is now usable without manually resizing the window on High DPI systems.</span></p>
+<p class="mainp"><span class="mainfont">* Patch now uses a more recent version of wla-dx assembler.</span></p>
+<p class="mainp"><span class="mainfont">* Phantom Train track now behaves correctly, playing train noises until the music is called for.</span></p>
+<p class="mainp"><span class="mainfont">* Select-a-scenario menu is now properly silent, instead of playing the last song played.</span></p>
+<p class="mainp"><span class="mainfont">* Patch is now compatible with ExHIROM patches.</span></p>
+<p class="mainp"><span class="mainfont">* Installer no longer freezes while testing for the status of mirrors.</span></p>
+<p class="mainp"><span class="mainfont">* Minor packaging fixes.</span></p>
+<p class="mainp"><span class="mainfont">* Unused files removed from GitHub tree.</span></p>
+<p class="emptyp"><br /></p>
+<p class="mainp"><span class="mainfont">Recently added features follow! For more details, as well as previously added features, check the thread on Qhimm.com</span></p>
+<p class="emptyp"><br /></p>
+<p class="mainp"><span class="mainfont">* Dancing Mad MSU-1 now works along with the Brave New World patch (apply after install). Technical details of this support are that state variables had to be moved to a different place in RAM so as not to conflict with BNW's state variables.</span></p>
+<p class="mainp"><span class="mainfont">* Five different versions of the opera are now available! These include new versions The Black Mages, Distant Worlds concert and More Friends Concert, as well as the existing Game Music Concert 4 and OST versions. See section 2 for details.
+<p class="mainp"><span class="mainfont">* Installer is now capable of previewing songs! Currently support is only enabled for the Opera selections, but once previews are available, a "preview" button will be available in the "custom track" selection table.</span></p>
+<p class="mainp"><span class="mainfont">* Installer now checks for pre-existing PCM files in the install directory. If these are found, they are compared against the files on the server. Upon a match, the download is skipped. This enables updating your version of Dancing Mad or changing your selection of tracks without redownloading a large number of files.</span></p>
+<p class="mainp"><span class="mainfont">* Sean Schafianski's "Disc 2" tracks now available to be downloaded/installed.</span></p>
+<p class="mainp"><span class="mainfont">* Installer now outputs a log to dancing-mad-installer.log in your home directory (e.g., C:\Users\yourusername). Please attach this when reporting installer bugs!</span></p>
 <p class="emptyp"><br /></p>
 <p class="mainp"><span class="bigfont">8. Credits &amp; Special Thanks</span></p>
 <p class="mainp"><span class="mainfont">
@@ -117,6 +139,8 @@ areas. Mod created by edale2, with help from Insidious611 (Dancing Mad's primary
 	<ul><li>Dylan J. Morrison (Insidious)</li></ul></li></ul>
 <ul><li>Patch
     <ul><li>Insidious</li></ul></li></ul>
+<ul><li>Preliminary fading work
+	<ul><li>Madsiur</li></ul></li></ul>
 <ul><li>Installer
     <ul><li>Insidious</li></ul></li></ul>
 <ul><li>Build/Packaging Scripts
@@ -137,7 +161,9 @@ areas. Mod created by edale2, with help from Insidious611 (Dancing Mad's primary
 	<li>Nobuo Uematsu (OST, Black Mages/OTH)</li>
 	<li>OCRemix Arrangers (various, see Balance & Ruin album on OCRemix website) (OCR/OCR2)</li>
 	<li>Tokyo Symphony Orchestra (GAME MUSIC CONCERT 4) (OTH, Opera)</li>
-    <li>The Black Mages (OTH)</li>
+    <li>The Black Mages (OTH, Opera)</li>
+	<li>The World Festival Symphony Orchestra (More Friends - Music From Final Fantasy (Opera)</li>
+	<li>The Royal Stockholm Philharmonic Orchestra (Distant Worlds: Music from Final Fantasy (Opera)</li>
     <li>ChrystalChameleon (CRC)</li>
     <li>Eiko Nichols (FFAR)</li>
 	<li>edale2 (editing/adding ambient sound) (OTH/various)</li></ul></li></ul>
