Update readme.html to reflect new discoveries re: compatibility.

--- a/installer/readme.html
+++ b/installer/readme.html
@@ -17,7 +17,7 @@ p, li { white-space: pre-wrap; }
 <p class="mainp"><span class="bigfont">1. Requirements</span></p>
 <p class="mainp"><span class="mainfont">Here's what you'll need to complete installation:</span></p>
 <p class="emptyp"><br /></p>
-<p class="mainp"><span class="boldfont">1</span><span class="mainfont">. A ROM image of Final Fantasy III (U) (V1.0). The japanese version and other later revisions will be supported in later releases.</span></p>
+<p class="mainp"><span class="boldfont">1</span><span class="mainfont">. A ROM image of Final Fantasy VI/III. Previous releases were only supported on the US release V1.0, but recent investigation has shown that all of the code we modify is identical between different versions of FF6.</span></p>
 <p class="mainp"><span class="boldfont">2</span><span class="mainfont">. An internet connection. The music files you select will be downloaded from http://www.somebodyelsesproblem.org/ or one of 3 alternate mirrors.</span></p>
 <p class="mainp"><span class="boldfont">3</span><span class="mainfont">. At least 4GB of hard drive space.</span></p>
 <p class="mainp"><span class="boldfont">4</span><span class="mainfont">. A copy of a recent copy of Higan, bsnes-plus, Snes9x with MSU support (including lr-snes9x), or an SD2SNES flash cart. Higan older than v096 is no longer supported. All hail Resume Support.</span></p>
@@ -77,7 +77,7 @@ areas. Mod created by edale2, with help from Insidious611 (Dancing Mad's primary
 <p class="mainp"><span class="mainfont">3. If you didn't choose a custom track selection, you're done! Wait for the files to download and the ROM to be patched, and click Next to read some final notes toremind you of the steps necessary to play the ROM hack. If you did, fill out your custom track selection (see section 4 for details) and then click Next to start the download and patching process.</span></p>
 <p class="mainp"><span class="mainfont">4. Follow the instructions given on the final page, and then click Finish. Congratulations, you now have a copy of Dancing Mad!</span></p>
 <p class="emptyp"><br /></p>
-<p class="mainp"><span class="superscriptfont">*</span><span class="mainfont"> Must currently be a US V1.0 FF3 SNES ROM. Support for other versions will be added as soon as I have the time to check offsets and test.  </span></p>
+<p class="mainp"><span class="superscriptfont">*</span><span class="mainfont"> Can be <b>any</b> version of FF6j/3u. Previous versions only supported US V1.0 but it has been found that the audio code is identical between versions.</span></p>
 <p class="mainp"><span class="superscriptfont">**</span><span class="mainfont"> As noted on the destination selection page, if you're using Higan this directory is to be considered temporary, as you'll have to movethe files around after install, see section 5 for details.</span></p>
 <p class="mainp"><span class="superscriptfont">*** </span><span class="mainfont">Older versions of BSNES lack support for resuming a track after changing tracks. As such, after battle area music will start over. BSNES v075 and earlier is no longer officially supported at all nor recommended.</span></p>
 <p class="emptyp"><br /></p>
