Fixes for installer packaging system for Py3.10
* Also includes fixes for licensing/readme dates.

--- a/installer/license.html
+++ b/installer/license.html
@@ -3,11 +3,11 @@
 <title>License File</title>
 </head>
 <body>
-<p>Dancing Mad is Copyright (c) 2015-2017 Dylan J. Morrison &lt;dylanjmorrison611@gmail.com&gt;</p>
+<p>Dancing Mad is Copyright (c) 2015-2022 Dylan J. Morrison &lt;dylanjmorrison611@gmail.com&gt;</p>
 <p>Includes or links to/depends on code licensed under the MIT license (Python-IPS), the GPLv3 license (PyQt5, Qt5), and the Python license (pretty much everything else...)</p>
 <p><pre>BSD 2-Clause License
 
-Copyright (c) 2017, Dylan Morrison
+Copyright (c) 2015-2022, Dylan Morrison
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
